fixed divs on links to be contained and not link in white space

--- a/src/components/country card/CountryCard.css
+++ b/src/components/country card/CountryCard.css
@@ -7,9 +7,6 @@
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center;
-    margin-left: 36px;
-    margin-right: 36px;
-    margin-bottom: 70px
 }
 
 .imgHolder img{
